# finale

./: .gitattributes  .gitignore  .merlin  LICENSE.txt  META  OMakefile  OMakeroot  README.mkd  cycle.opam  dune-project  finale.opam  fractale.opam  metal.opam  opam
examples/calc/: calc.ml  jbuild
examples/json/: jbuild  json.ml
lib/: OMakefile  SYM.ml  SYM.mli  combinator.ml  combinator.mli  combinator_intf.ml  dune  iso.ml  iso.mli  iso_partial.ml  iso_partial.mli  jbuild  lazy_stream.ml  lazy_stream.mli  metal.ml  metal.mli  metal_aux.ml  metal_aux.mli  metal_iso.ml  metal_iso.mli  metal_metasyntax.ml  metal_metasyntax.mli  metal_parser.ml  metal_parser.mli  metal_pretty.ml  metal_pretty.mli  metal_source.ml  metal_source.mli  operator_precedence.ml  operator_precedence.mli  operator_precedence_intf.ml  parser.ml  parser.mli  parser_intf.ml  pretty.ml  pretty.mli  pretty_intf.ml  syntax.ml  syntax.mli  syntax_intf.ml  (+2 more)
lib-test/: combinator_test.ml  dune  finale_tt.ml  fractale_tt.ml  hoge.ml  iso_partial_test.ml  iso_test.ml  jbuild  lazy_stream_test.ml  operator_precedence_test.ml  operator_precedence_tt.ml  parser_test.ml  parser_tt.ml  pretty_test.ml  pretty_tt.ml  runtest.ml  token_test.ml
src/: OMakefile  main.ml
test/: .#operator_precedence_tt.ml  OMakefile  operator_precedence_tt.ml  parser_tt.ml  pretty_tt.ml
