opam-version:   "1.2"
version:        "0.1.0-SNAPSHOT"
maintainer:     "Takahisa Watanabe <linerlock@outlook.com>"
authors:       ["Takahisa Watanabe <linerlock@outlook.com"]
available:     [ocaml-version >= "4.04.0" ]
tags:          ["parser-combinator"
                "parser"
                "pretty-printer"
                "invertible-syntax"
               ]
license:        "MIT"
homepage:       "http://github.com/takahisa/finale"
dev-repo:       "http://github.com/takahisa/finale"
bug-reports:    "http://github.com/takahisa/finale/issues"
doc:            ""
build:        [["jbuilder" "build"   "-p" name "-j" jobs]]
build-test:   [["jbuilder" "runtest" "-p" name "-j" jobs]]
install:      [["jbuilder" "install"]]
remove:       [["jbuilder" "clean"]]
depends:       ["jbuilder"       {build}
                "opam-installer" {build}
                "core"           {build & >= "0.10.0" }
                "core_bench"     {build & >= "0.10.0" }
                "ounit"          {test  & >= "2.0.0"  }
               ]
